  Alkhalifah)
* jsg/lfd: Lowrank finite-differences and lowrank Fourier
finite-differences for seismic wave extrapolation in the acoustic
approximation (Song, Fomel, and Ying)
* sep/waverays: Wavefront construction using waverays (Urdaneta)
* swag/itime: Automatic traveltime picking using the instantaneous
  traveltime (Saragiotis, Alkhalifah, and Fomel)

To SCons:

* Upgraded to scons-2.3.0

To documentation:

* Selfdocs include links for programs of the month

To APIs:

To the Python package:

* Added an ability to have list arguments in configure
* Added MLK support in configure
* Added selfdocs for placeholders in bldutil

To programs:

* Added scalebar= option for sfgraph with depth=
* Added an ability to specify options for sfpen with SFPENOPTS
* Added opt= parameter in sfspectra
* sfpad2nextfastsize: wrapper for kiss_fft_next_fast_size so it can be
  called from scripts and SConstruct files. Python wrapper for it:
  rsf.user.sf.pad2nextfastsize()
* Added forcebw= and force_raster options for pspen
* Added snap= option for sffftwave2
* Added frame numbers for movies made with sfgraph
* Included lbfgs in user/sparse
* user/fangg: new contributor (Gang Fang)
* Added an ability to specify a colortable in a CSV file
* user/luke: new contributor (Luke Decker)
* Moved some programs from user/fomels to user/pwd
* sfzoom: example Tkinter script for interactive zooming

===Bug fixes===

In the reproducible documents collection:

In documentation:

* Fixed nb= parameter in sfawefd2d and sfawefd3d

In APIs:

In the Python package:

In programs:

* Fixed bug with handling zero values in sfclip
* Fixed incorrect data size bug in sffindmo
* Fixed true colors in gdpen

In the build system:

* Replaced WhereIs('python') with sys.executable
* Check for OpenMP even at a single-CPU system
* Use integer*8 in f77 examples

===Changes in defaults and interfaces===

==Release 1.4 (2012-04-22)==

===Additions and enhancements===

To the reproducible documents collection:
