@@ -6,7 +6,7 @@ waves = '''
 rtm wave wave24
 '''
 other = '''
-vam
+acd2d eacd2d vam
 '''
 
 try:  # distributed version
